# MIPSquare

./: .gitignore  CMakeLists.txt  MIPSProgram.txt  README.md  complex_program.txt  loop_machine_code.txt  loop_test.txt  test_assembly.txt
src/: Alu.cpp  Alu.h  Configureation.h  CpuSimulator.cpp  CpuSimulator.h  Instruction.cpp  Instruction.h  Memory.cpp  Memory.h  MipsParser.cpp  MipsParser.h  Multiplexer.cpp  Multiplexer.h  OsSimulator.cpp  OsSimulator.h  PipelineStructure.cpp  PipelineStructure.h  ProgramCounter.cpp  ProgramCounter.h  Register.cpp  Register.h  RegisterFile.cpp  RegisterFile.h  main.cpp
tests/: BEQ_J_SW_LW_Test  BEQ_J_SW_LW_Test.txt  ControlHazardTest.txt  InstrucitonTest.txt  JumpTest.txt  RAWTest.txt  SimpleLoop.txt  SquareAndStore_Simple.txt
